Orthographic camera viewport display size #52051

Closed
opened 2017-07-14 04:09:10 +02:00 by JA 12 · 7 comments

Ubuntu 14.04, Gnome 3 fallback, nvidia graphics

Broken:
Blender 2.78c, Blender 2.78.5 2771f602e6

The way camera object is drawn in the viewport switch behaviour with orthographic camera, compared to perspective and panoramic cameras:
orthocamera.png
Changing the focal length squishes the camera object, but orthographic camera changes size. Changing the display size on perspective and panoramic cameras changes the size as expected, but orthographic camera squishes. The problem being that one can't change the orthographic camera display size and not have it block the view without changing the zoom level. Could move it out of the way, but then that could start messing with set clipping settings.

This behaviour doesn't seem intentional so posting this for you to check

Exact steps for others to reproduce the error
Open orthocamera.blend and adjust camera display size and focal length/ortho scale with different camera types. Orthographic camera display size and scale do the opposite than it does with the other two.

Ubuntu 14.04, Gnome 3 fallback, nvidia graphics Broken: Blender 2.78c, Blender 2.78.5 2771f602e6 The way camera object is drawn in the viewport switch behaviour with orthographic camera, compared to perspective and panoramic cameras: ![orthocamera.png](https://archive.blender.org/developer/F666676/orthocamera.png) Changing the focal length squishes the camera object, but orthographic camera changes size. Changing the display size on perspective and panoramic cameras changes the size as expected, but orthographic camera squishes. The problem being that one can't change the orthographic camera display size and not have it block the view without changing the zoom level. Could move it out of the way, but then that could start messing with set clipping settings. This behaviour doesn't seem intentional so posting this for you to check **Exact steps for others to reproduce the error** Open [orthocamera.blend](https://archive.blender.org/developer/F666687/orthocamera.blend) and adjust camera display size and focal length/ortho scale with different camera types. Orthographic camera display size and scale do the opposite than it does with the other two.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ja12

Added subscriber: @ja12

Added subscriber: @jaggz

Added subscriber: @jaggz

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29

Well, in code main scaling for camera drawing explicitly only depends on ortho scale only for ortho camera… Maybe we could tempered that with object scale, as done with perspective camera, unless current behavior is done like that for a good reason, @ideasman42 may know why?

Well, in code main scaling for camera drawing explicitly only depends on ortho scale only for ortho camera… Maybe we could tempered that with object scale, as done with perspective camera, unless current behavior is done like that for a good reason, @ideasman42 may know why?

This issue was referenced by 908b6d8be3

This issue was referenced by 908b6d8be3c08157bf30e482e6fa848d728eb1ed

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52051
No description provided.